Fixes issue where KVC fails while copying an object with nested relationships from one Realm to another.
Without initializing the underlying ivar for a list property on an object contained within a list on its parent object, KVC will simply return a blank list.

Fixes: https://github.com/realm/realm-cocoa/issues/2754#issuecomment-159322825

--- a/Realm.xcodeproj/xcshareddata/xcschemes/Realm.xcscheme
+++ b/Realm.xcodeproj/xcshareddata/xcschemes/Realm.xcscheme
@@ -52,6 +52,16 @@
                ReferencedContainer = "container:Realm.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5D660FD71BE98C7C0021E04F"
+               BuildableName = "RealmSwift Tests.xctest"
+               BlueprintName = "RealmSwift Tests"
+               ReferencedContainer = "container:Realm.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
